<resources>
    <string name="app_name">MJO Mision Cba</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_item_itinerary">Itinerario</string>
    <string name="navigation_item_prayer_of_missionary">Oraciones</string>
    <string name="navigation_item_reading_per_day">Lecturas</string>
    <string name="navigation_item_contact">Info</string>
    <string name="prayer_of_missionary">Corazón de Jesús,tiende una mirada hacia todos aquellos que no te conocen y hacia los trabajos de los misioneros, quienes, por tu amor, han abandonado su casa, su patria y sus cariños más íntimos.
        \n \nBendice sus trabajos y concédeles la gracia de repartir el pan de la divina Palabra entre los mendigos de la Verdad.
        \n \nHazles sentir que Tú estás con ellos en sus trabajos y preocupaciones, y dales la gracia de perseverar hasta el fin en la vida de abnegación para la que los has escogido: Sagrado Corazón de Jesús, por amor de tu misma gloria, protege los esfuerzos de tus Misioneros.
        \n \nAmén.</string>
    <string-array name="referents_name">
        <item>Florencia Rodriguez </item>
        <item>Tamara Rodriguez</item>
        <item>Ana laura Peralta</item>
    </string-array>
    <string-array name="referents_phone_number">
        <item>3515280086 </item>
        <item>3513739501</item>
        <item>3533412019</item>
    </string-array>
    <string-array name="animadores_name">
        <item>Lautaro Abrigo</item>
        <item>Sabrina Chavez</item>
        <item>Lucas Lopez</item>
    </string-array>
    <string-array name="animadores_phone_number">
        <item>3516807934</item>
        <item>3518101704</item>
        <item>3515080172</item>
    </string-array>
    <string name="title_activity_cotto_detail">\'Cotto\' de Córdoba</string>
    <string name="cotto_detail_part_one">
        "El Pequeño Cottolengo Argentino fue abierto por el mismo San Luis Orione."
        "Durante su segunda estadía en nuestro país, colocó en Claypole (al sur del gran Buenos Aires) la piedra fundamental de su construcción el 28 de abril de 1935."
        "Sus comienzos en la ciudad de Córdoba, datan de 1957."
        "Dentro del predio del Cottolengo de Córdoba, estan funcionando tres entidades unidas por el mismo carisma:\n- El Colegio Don Orione.\n- El Cottolengo.\n- La parroquia.\n\n"
        "En cuanto al Colegio, tenemos dos:\n+El Instituto Don Orione\n+El Colegio Especial.\n\n"
        "En cuanto al Cotto, este tiene 126 residentes que poseen distintas discapacidades mentales y fisicas. Esta formado por 4 casas u hogares (3 de mujeres y 1 de varones), las cuales son:\n-Itati.\n-Lourdes.\n-San Jose.\n-Divina Providencia.\n\n"
        "En cuanto a la parroquia en la misma se dan catequesis, estan los grupos juveniles, grupos de ayuda a personas, etc. La parroquia esta integrada por mas de 5 capillas, algunas de las cuales se van a misionar este año."
    </string>
    <string name="cotto_detail_part_two">
        "El Pequeño Cottolengo Don Orione es una obra destinada a la atención integral de personas con discapacidad."
        "Por albergar a personas con discapacidades múltiples, físicas y mentales, su abordaje terapéutico y educativo es complejo,"
        "debiendo realizarse a través de equipos interdisciplinares, donde la tarea de cada uno (religiosos, profesionales, asistentes, voluntarios) se pone en común para un mejor servicio del residente y, en lo posible, de su familia, cuando ésta existe.
    </string>
    <string name="cotto_detail_part_three">
        "Fundamentalmente, las tareas en favor de las personas con discapacidad, son las de asistir, cuidar, rehabilitar, educar y promover, siempre en un necesario clima de familia:"
        "'La Pequeña Obra de la Divina Providencia debe ser como una familia en Jesucristo… porque nuestra fuerza está en la unión, cuyo vínculo es Cristo'."
    </string>
    <string name="fragment_contact_referentes_de_mision_label">Coordinadores generales</string>
    <string name="fragment_contact_mision_web_label">La misión en la Web</string>
    <string name="fragment_contact_animadores_label">Coordinadores grupales</string>
    <string name="fragment_contact_cotto_label">Cotto</string>
    <string name="fragment_contact_emergencias_label">Emergencias</string>
    <string name="fragment_contact_policia_label">Policia</string>
    <string name="fragment_contact_bomberos_label">Bomberos</string>
    <string name="fragment_contact_hospital_label">Hospital</string>
    <string name="fragment_contact_mision_web_content">
        Mira el post de la misión en nuestra pagina oficial..
    </string>
    <string-array name="reading_days_titles">
        <item>Sabado 7 </item>
        <item>Domingo 8</item>
        <item>Lunes 9</item>
        <item>Martes 10</item>
        <item>Miercoles 11</item>
        <item>Jueves 12</item>
        <item>Viernes 13</item>
        <item>Sabado 14</item>
        <item>Domingo 15</item>
    </string-array>
    <string-array name="spinner_days_titles">
        <item>Todos los dias</item>
        <item>Sabado 7 </item>
        <item>Domingo 8</item>
        <item>Lunes 9</item>
        <item>Martes 10</item>
        <item>Miercoles 11</item>
        <item>Jueves 12</item>
        <item>Viernes 13</item>
        <item>Sabado 14</item>
        <item>Domingo 15</item>
    </string-array>
    <string name="firs_reading_text">Primera lectura </string>
    <string name="psalms_reading_text">Salmo</string>
    <string name="second_reading_text">Segunda lectura</string>
    <string name="gospel_reading_text">Evangelio</string>
    <string name="first_redaing_for_day_1"> "Hijos míos: Dios nos concederá todo cuanto le pidamos, porque cumplimos sus mandamientos y hacemos lo que le agrada. Su mandamiento es éste: que creamos en el Nombre de su Hijo Jesucristo, y nos amemos los unos a los otros como él nos ordenó. El que cumple sus mandamientos permanece en Dios, y Dios permanece en él; y sabemos que él permanece en nosotros, por el Espíritu que nos ha dado. Queridos míos, no crean a cualquiera que se considere inspirado: pongan a prueba su inspiración, para ver si procede de Dios, porque han aparecido en el mundo muchos falsos profetas. En esto reconocerán al que está inspirado por Dios: todo el que confiesa a Jesucristo manifestado en la carne, procede de Dios. Y todo el que niega a Jesús, no procede de Dios, sino que está inspirado por el Anticristo, de quien ustedes oyeron decir que vendría y ya está en el mundo. Hijos míos, ustedes son de Dios y han vencido a esos falsos profetas, porque Aquel que está en ustedes es más grande que el que está en el mundo. Ellos son del mundo, por eso hablan el lenguaje del mundo y el mundo los escucha. Nosotros, en cambio, somos de Dios. El que conoce a Dios nos escucha; pero el que no es de Dios, no nos escucha. Y en esto distinguiremos la verdadera de la falsa inspiración.\n\n Palabra de Dios"</string>
    <string name="secong_redaing_for_day_1"></string>
    <string name="psalms_redaing_for_day_1">
        "Voy a proclamar el decreto del Señor: Él me ha dicho: 'Tú eres mi hijo, yo te he engendrado hoy. Pídeme, y te daré las naciones como herencia, y como propiedad, los confines de la tierra' R/.\n\n"
        "Por eso, reyes, sean prudentes; aprendan, gobernantes de la tierra. Sirvan al Señor con temor; temblando, ríndanle homenaje. R/."
    </string>
    <string name="gospel_redaing_for_day_1">"Cuando Jesús se enteró de que Juan Bautista había sido arrestado, se retiró a Galilea. Y, dejando Nazaret, se estableció en Cafarnaún, a orillas del lago, en los confines de Zabulón y Neftalí, para que se cumpliera lo que había sido anunciado por el profeta Isaías: “¡Tierra de Zabulón, tierra de Neftalí, camino del mar, país de la Transjordania, Galilea de las naciones! El pueblo que se hallaba en tinieblas vio una gran luz; sobre los que vivían en las oscuras regiones de la muerte, se levantó una luz”. A partir de ese momento, Jesús comenzó a proclamar: “Conviértanse, porque el Reino de los Cielos está cerca”. Jesús recorría toda la Galilea, enseñando en las sinagogas de ellos, proclamando la Buena Noticia del Reino y sanando todas las enfermedades y dolencias de la gente. Su fama se extendió por toda la Siria, y le llevaban a todos los enfermos, afligidos por diversas enfermedades y sufrimientos: endemoniados, epilépticos y paralíticos, y él los sanaba. Lo seguían grandes multitudes que llegaban de Galilea, de la Decápolis, de Jerusalén, de Judea y de la Transjordania.\n\n Palabra del Señor"</string>
    <string name="first_redaing_subtitle_for_day_1">"Lectura de la primera carta del apóstol san Juan (3,22–4,6):"</string>
    <string name="secong_redaing_subtitle_for_day_1"></string>
    <string name="psalms_redaing_subtitle_for_day_1">"Sal 2,7-8.10-12a \n\nR/. ¡Te daré las naciones como herencia!"</string>
    <string name="gospel_redaing_subtitle_for_day_1">"Lectura del santo evangelio según san Mateo (4,12-17.23-25):"</string>
    <string-array name="readings_for_day_1_content">
        <item>@string/first_redaing_for_day_1</item>
        <item>@string/psalms_redaing_for_day_1 </item>
        <item>@string/gospel_redaing_for_day_1</item>
    </string-array>
    <string-array name="readings_for_day_1_subtitle">
        <item>@string/first_redaing_subtitle_for_day_1</item>
        <item>@string/psalms_redaing_subtitle_for_day_1 </item>
        <item>@string/gospel_redaing_subtitle_for_day_1</item>
    </string-array>
    <string-array name="readings_for_day_1_title">
        <item>@string/firs_reading_text</item>
        <item>@string/psalms_reading_text </item>
        <item>@string/gospel_reading_text</item>
    </string-array>
    <string name="first_redaing_for_day_2">"Así habla el Señor: Este es mi servidor, a quien yo sostengo, mi elegido, en quien se complace mi alma. Yo he puesto mi espíritu sobre él para que lleve el derecho a las naciones. Él no gritará, no levantará la voz ni la hará resonar por las calles. No romperá la caña quebrada ni apagará la mecha que arde débilmente. Expondrá el derecho con fidelidad; no desfallecerá ni se desalentará hasta implantar el derecho en la tierra, y las costas lejanas esperarán su ley. Yo, el Señor, te llamé en la justicia, te sostuve de la mano, te formé y te destiné a ser la alianza del pueblo, la luz de las naciones, para abrir los ojos de los ciegos, para hacer salir de la prisión a los cautivos y de la cárcel a los que habitan en las tinieblas. \n\nPalabra de Dios"</string>
    <string name="secong_redaing_for_day_2">"Pedro, tomando la palabra, dijo: 'Verdaderamente, comprendo que Dios no hace acepción de personas, y que en cualquier nación, todo el que lo teme y practica la justicia, es agradable a él. Él envió su Palabra al pueblo de Israel, anunciándoles la Buena Noticia de la paz por medio de Jesucristo, que es el Señor de todos. Ustedes ya saben qué ha ocurrido en toda Judea, comenzando por Galilea, después del bautismo que predicaba Juan: cómo Dios ungió a Jesús de Nazaret con el Espíritu Santo, llenándolo de poder. Él pasó haciendo el bien y sanando a todos los que habían caído en poder del demonio, porque Dios estaba con él' \n\nPalabra de Dios"</string>
    <string name="navigation_item_group">Grupos misioneros</string>
    <string name="navigation_item_maps">Mapa de barrios</string>
    <string name="feedback_step_two_title_label">¿En qué podemos mejorar?</string>
    <string name="feedback_step_two_suggestions_label">Sugerencias para la próxima misión</string>
    <string name="feedback_step_two_sunmit_btn_label">Enviar</string>
</resources>