<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_itinerary"
            android:icon="@mipmap/ic_event_black_24dp"
            android:title="@string/navigation_item_itinerary" />
        <item
            android:id="@+id/nav_readings"
            android:icon="@mipmap/ic_import_contacts_black_24dp"
            android:title="@string/navigation_item_reading_per_day" />

        <item
            android:id="@+id/nav_prayer"
            android:icon="@mipmap/ic_import_contacts_black_24dp"
            android:title="@string/navigation_item_prayer_of_missionary" />

        <item
            android:id="@+id/nav_location_group"
            android:icon="@mipmap/ic_group_black_24dp"
            android:title="@string/navigation_item_group" />

        <item
            android:id="@+id/nav_map"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/navigation_item_maps" />

        <item
            android:id="@+id/nav_contact"
            android:icon="@mipmap/ic_info_black_24dp"
            android:title="@string/navigation_item_contact" />
    </group>


</menu>
