<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mjo.misioncba.section.feedback.stepTwo.FeedbackActivityStepTwo">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/feedback_step_two_title_label"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/feedback_suggestion"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:autoLink="all"
        android:hint="@string/feedback_step_two_suggestions_label"
        android:lines="5"
        android:minLines="1"
        android:gravity="top|left"
        android:maxLines="10"
        android:scrollbars="none"
        android:inputType="textMultiLine|textCapSentences"/>

    <Button
        android:id="@+id/feedback_submit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/feedback_step_two_sunmit_btn_label"
        android:background="@color/colorAccent"/>

</LinearLayout>
